.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Claim__c.object
<CustomObject>
    <description>Brings together individual Expenses when submitted for approval</description>
    <fields>
        <fullName>xcdhcm__Amount__c</fullName>
        <description>For sum Claim amount from Expense object</description>
        <label>xAmount</label>
        <summarizedField>xcdhcm__Expense__c.xcdhcm__Claims__c</summarizedField>
        <summaryFilterItems>
            <field>xcdhcm__Expense__c.xcdhcm__Status__c</field>
            <operation>equals</operation>
            <value>Awaiting</value>
        </summaryFilterItems>
        <summaryForeignKey>xcdhcm__Expense__c.xcdhcm__Expense_rel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cloned_claim__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use in approval process which says if cloned don&apos;t send an approval email.</description>
        <label>Cloned claim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Date_authorized__c</fullName>
        <label>Date approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Date_paid__c</fullName>
        <label>Date paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Date_submitted__c</fullName>
        <label>Claim submitted</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Date_submitted_date__c</fullName>
        <label>Date submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_email__c</fullName>
        <label>Employee email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_leaving_date__c</fullName>
        <formula>xcdhcm__Employee__r.xcdhcm__Leaving_Date__c</formula>
        <label>Employee leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Finance_year__c</fullName>
        <formula>TEXT(YEAR( xcdhcm__Date_paid__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaver_before_data_retention_period__c</fullName>
        <formula>If( 
not(isblank( xcdhcm__Employee__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c )), 
xcdhcm__Employee_leaving_date__c &lt; xcdhcm__Employee__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c, 
xcdhcm__Employee_leaving_date__c &lt; xcdhcm__Employee__r.xcdhcm__Company__r.xcdhcm__HMRC_data_retention_threshold__c 
)</formula>
        <label>Leaver before data retention period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Manager_email__c</fullName>
        <label>Manager email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Mileage_total__c</fullName>
        <description>Sum of 	Mileage from Expense</description>
        <label>Total miles</label>
        <summarizedField>xcdhcm__Expense__c.xcdhcm__Mileage__c</summarizedField>
        <summaryForeignKey>xcdhcm__Expense__c.xcdhcm__Expense_rel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Month__c</fullName>
        <formula>TEXT(MONTH( xcdhcm__Date_paid__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This used to check the expense claim include in payroll calculation or not.</description>
        <label>xPaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Payment_made__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pay Run in which this Claim was paid</description>
        <inlineHelpText>Pay Run in which this Claim was paid</inlineHelpText>
        <label>Payment made</label>
        <referenceTo>xcdhcm__Pay_Summary__c</referenceTo>
        <relationshipLabel>Expense Claims</relationshipLabel>
        <relationshipName>Expense_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Status__c</fullName>
        <description>Picklist values (Awaiting approval, Returned, New, Confirmed) are used in code.  Please contact developer before changing their values.</description>
        <label>Claim status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Not yet submitted</fullName>
                </value>
                <value>
                    <fullName>Awaiting approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Unpaid</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_amount__c</fullName>
        <formula>xcdhcm__Total_claim__c -  xcdhcm__Total_tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total expense claim less tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_claim__c</fullName>
        <label>Total claim amount</label>
        <summarizedField>xcdhcm__Expense__c.xcdhcm__Claims__c</summarizedField>
        <summaryForeignKey>xcdhcm__Expense__c.xcdhcm__Expense_rel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_tax__c</fullName>
        <label>Total tax</label>
        <summarizedField>xcdhcm__Expense__c.xcdhcm__Tax__c</summarizedField>
        <summaryForeignKey>xcdhcm__Expense__c.xcdhcm__Expense_rel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__View_claim__c</fullName>
        <description>This field is used to redirect baseurl with ClaimDetails vf page in Claim email template.This field created for Jira-1124</description>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;Id</formula>
        <label>View claim details</label>
        <type>Text</type>
    </fields>
    <label>Claim</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <columns>xcdhcm__Employee__c</columns>
        <columns>NAME</columns>
        <columns>xcdhcm__Total_claim__c</columns>
        <columns>xcdhcm__Status__c</columns>
        <columns>xcdhcm__Date_submitted__c</columns>
        <columns>xcdhcm__Date_authorized__c</columns>
        <columns>xcdhcm__Date_paid__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>xcdhcm__Claim</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Employee__c</columns>
        <columns>xcdhcm__Total_claim__c</columns>
        <columns>xcdhcm__Status__c</columns>
        <columns>xcdhcm__Date_submitted__c</columns>
        <columns>xcdhcm__Date_authorized__c</columns>
        <columns>xcdhcm__Date_paid__c</columns>
        <filterScope>Everything</filterScope>
        <label>Claim</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>Claim reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Claims</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>